--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hinic (0+git20250605+6.6.0-95.0.0-2) UNRELEASED; urgency=low
+hinic (0+git20250605+6.6.0-95.0.0-2) unstable; urgency=low
 
   * Add patches for compatibility with 6.6, 6.1, 5.15, 5.10, 5.4 kernels
   * Add patch to fix build error when CONFIG_DCB is not enabled
