--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hinic-dkms (0+git20250605+6.6.0-95.0.0-4) UNRELEASED; urgency=medium
+
+  * d/copyright: update the url in Format: to https
+
+ -- Miao Wang <shankerwangmiao@gmail.com>  Mon, 05 Jan 2026 21:17:19 +0800
+
 hinic-dkms (0+git20250605+6.6.0-95.0.0-3) unstable; urgency=medium
 
   [ Miao Wang ]
