--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
-hinic (0+git20250605+6.6.0-95.0.0-3) UNRELEASED; urgency=low
+hinic-dkms (0+git20250605+6.6.0-95.0.0-3) unstable; urgency=medium
 
+  [ Miao Wang ]
   * Add patches for compatibility with 6.18 kernels
   * Fix copyright and license information in debian/copyright
-  * Initial release. (Closes: #1124670)
+  * Initial upload. (Closes: #1124670)
 
- -- Miao Wang <shankerwangmiao@gmail.com>  Sun, 04 Jan 2026 18:22:43 +0800
+  [ Shengqi Chen ]
+  * d/control: add myself in uploaders
+  * d/control: rename src package to hinic-dkms
+
+ -- Shengqi Chen <harry@debian.org>  Mon, 05 Jan 2026 21:00:17 +0800
 
 hinic (0+git20250605+6.6.0-95.0.0-2) unstable; urgency=low
 
